# pdfplumber-rs

./: .gitignore  .ralph-worktree  AGENTS.md  CLAUDE.md  CREW.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/pdfplumber/: CHANGELOG.md  Cargo.toml
crates/pdfplumber-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/pdfplumber-cli/src/: annots_cmd.rs  bookmarks_cmd.rs  chars_cmd.rs  cli.rs  debug_cmd.rs  forms_cmd.rs  images_cmd.rs  info_cmd.rs  inspect_cmd.rs  links_cmd.rs  main.rs  page_range.rs  search_cmd.rs  shared.rs  tables_cmd.rs  text_cmd.rs  validate_cmd.rs  words_cmd.rs
crates/pdfplumber-cli/src/cli/: mod.rs  tests.rs
crates/pdfplumber-cli/src/tui/: app.rs  config_persist.rs  event_loop.rs  events.rs  extraction.rs  input_handlers.rs  mod.rs  process_scan.rs  screen_config.rs  screen_extract.rs  screen_grep.rs  screen_menu.rs  screen_process.rs  theme.rs  widgets.rs
crates/pdfplumber-cli/tests/: annots_cmd.rs  bookmarks_cmd.rs  chars_cmd.rs  cli_args.rs  fixture_cli_tests.rs  info_cmd.rs  links_cmd.rs  search_cmd.rs  tables_cmd.rs  text_cmd.rs  validate_cmd.rs  words_cmd.rs
crates/pdfplumber-core/: CHANGELOG.md  Cargo.toml
crates/pdfplumber-core/examples/: bbox_operations.rs
crates/pdfplumber-core/src/: annotation.rs  bookmark.rs  dedupe.rs  edges.rs  encoding.rs  error.rs  forensic.rs  form_field.rs  geometry.rs  html.rs  hyperlink.rs  images.rs  layout.rs  lib.rs  markdown.rs  markdown_conversion.rs  metadata.rs  page_object.rs  page_regions.rs  painting.rs  path.rs  repair.rs  search.rs  shapes.rs  signature.rs  struct_tree.rs  svg.rs  table.rs  text.rs  unicode_norm.rs  validation.rs  words.rs
crates/pdfplumber-core/src/encoding/: glyph_names.rs  mod.rs
crates/pdfplumber-core/src/error/: mod.rs  tests.rs
crates/pdfplumber-core/src/html/: mod.rs  tests.rs
crates/pdfplumber-core/src/images/: mod.rs  tests.rs
crates/pdfplumber-core/src/layout/: mod.rs  tests.rs
crates/pdfplumber-core/src/painting/: mod.rs  tests.rs
crates/pdfplumber-core/src/shapes/: mod.rs  tests.rs
crates/pdfplumber-core/src/svg/: mod.rs  tests.rs
crates/pdfplumber-core/src/table/: algorithms.rs  extraction.rs  mod.rs  tests.rs
crates/pdfplumber-core/src/words/: mod.rs  tests.rs
crates/pdfplumber-core/tests/: serde_roundtrip.rs
crates/pdfplumber-parse/: CHANGELOG.md  Cargo.toml
crates/pdfplumber-parse/examples/: tokenize_stream.rs
crates/pdfplumber-parse/src/: backend.rs  char_extraction.rs  cid_font.rs  cjk_encoding.rs  cmap.rs  color_space.rs  error.rs  font_metrics.rs  handler.rs  interpreter.rs  interpreter_state.rs  lib.rs  lopdf_backend.rs  page_geometry.rs  standard_fonts.rs  text_renderer.rs  text_state.rs  tokenizer.rs
crates/pdfplumber-parse/src/cff/: mod.rs
crates/pdfplumber-parse/src/cid_font/: mod.rs  parsing.rs  tests.rs
crates/pdfplumber-parse/src/cmap/: mod.rs  tests.rs
crates/pdfplumber-parse/src/font_metrics/: mod.rs  tests.rs
crates/pdfplumber-parse/src/interpreter/: events.rs  font.rs  mod.rs  tests.rs  text.rs  xobjects.rs
crates/pdfplumber-parse/src/lopdf_backend/: annots.rs  forms.rs  metadata.rs  mod.rs  structure.rs  tests.rs  validate.rs
crates/pdfplumber-parse/src/text_renderer/: mod.rs
crates/pdfplumber-parse/src/text_state/: mod.rs
crates/pdfplumber-parse/src/tokenizer/: mod.rs  parse.rs
crates/pdfplumber-py/: Cargo.toml  README.md  pdfplumber.pyi  pyproject.toml
crates/pdfplumber-py/src/: lib.rs  tests.rs
crates/pdfplumber/benches/: README.md  extraction.rs
crates/pdfplumber/examples/: extract_chars.rs  extract_table.rs  extract_text.rs
crates/pdfplumber/src/: cropped_page.rs  lib.rs  page.rs  pdf.rs
crates/pdfplumber/src/cropped_page/: mod.rs  tests.rs
crates/pdfplumber/src/page/: mod.rs  tests.rs
crates/pdfplumber/src/pdf/: helpers.rs  mod.rs  tests.rs
crates/pdfplumber/tests/: accuracy_benchmark.rs  anytomd_golden.rs  cross_validation.rs  fixture_integration.rs  page_api_integration.rs  pdf_integration.rs  real_world_cross_validation.rs  real_world_integration.rs  repair_integration.rs  rotation_integration.rs  rotation_table_integration.rs  table_diagnostic.rs  validation_integration.rs
crates/pdfplumber/tests/common/: mod.rs
crates/pdfplumber/tests/fixtures/: checksums.sha256
crates/pdfplumber/tests/fixtures/golden/: 150109DSP-Milw-505-90D.json  2023-06-20-PV.json  ag-energy-round-up-2017-02-24.json  annotations-rotated-180.json  annotations-rotated-270.json  annotations-rotated-90.json  annotations-unicode-issues.json  annotations.json  background-checks.json  cupertino_usd_4-6-16.json  extra-attrs-example.json  figure_structure.json  hello_structure.json  image_structure.json  issue-1054-example.json  issue-1114-dedupe-chars.json  issue-1147-example.json  issue-1181.json  issue-1279-example.json  issue-13-151201DSP-Fond-581-90D.json  issue-140-example.json  issue-192-example.json  issue-203-decimalize.json  issue-297-example.json  issue-33-lorem-ipsum.json  issue-336-example.json  issue-461-example.json  issue-463-example.json  issue-466-example.json  issue-53-example.json  issue-598-example.json  issue-67-example.json  issue-71-duplicate-chars.json  issue-842-example.json  issue-848.json  issue-90-example.json  issue-905.json  issue-912.json  issue-987-test.json  la-precinct-bulletin-2014-p1.json  (+17 more)
crates/pdfplumber/tests/fixtures/golden/oss-fuzz/: 4591020179783680.json  4652594248613888.json  4715311080734720.json  4833695495684096.json  4927662560968704.json  5317294594523136.json  5452007745323008.json  5592736912179200.json  5903429863538688.json
crates/pdfplumber/tests/fixtures/golden/pdfbox/: BidiSample.json  FC60_Times.json  hello3.json  pdfbox-3127-vfont-reduced.json  pdfbox-3833-japanese-reduced.json  pdfbox-4322-empty-tounicode-reduced.json  pdfbox-4531-bidi-ligature-1.json  pdfbox-4531-bidi-ligature-2.json  pdfbox-5350-korean-reduced.json  pdfbox-5747-surrogate-diacritic-reduced.json
crates/pdfplumber/tests/fixtures/golden/pdfjs/: ArabicCIDTrueType.json  cid_cff.json  issue14117.json  issue3521.json  issue4875.json  issue7696.json  issue8570.json  (+8 more)
(+98 files in other folders)
