[package]
name = "pdfplumber-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data types and algorithms for pdfplumber-rs (backend-independent)"
keywords = ["pdf", "table", "text-extraction", "pdfplumber"]
categories = ["parser-implementations", "text-processing"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
