[package]
name = "pdfplumber-parse"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF parsing and content stream interpreter for pdfplumber-rs"
keywords = ["pdf", "parser", "content-stream", "pdfplumber"]
categories = ["parser-implementations"]

[dependencies]
pdfplumber-core = { version = "0.1.0", path = "../pdfplumber-core" }
lopdf = { version = "0.34", default-features = false, features = ["nom_parser"] }
thiserror = "2"

[dev-dependencies]
md5 = "0.7"
