[package]
name = "pdfplumber-py"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for pdfplumber-rs via PyO3"

[lib]
name = "pdfplumber"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pyo3 = { version = "0.24" }
pdfplumber = { path = "../pdfplumber" }

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
lopdf = "0.34"
pyo3 = { version = "0.24", features = ["auto-initialize"] }
