[package]
name = "pdfplumber"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Extract chars, words, lines, rects, and tables from PDF documents with precise coordinates"

[features]
default = ["std"]
std = []
serde = ["pdfplumber-core/serde"]
parallel = ["dep:rayon"]

[dependencies]
pdfplumber-core = { path = "../pdfplumber-core" }
pdfplumber-parse = { path = "../pdfplumber-parse" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
lopdf = "0.34"
serde_json = "1.0"
