[package]
name = "pdfplumber"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Extract chars, words, lines, rects, and tables from PDF documents with precise coordinates"
keywords = ["pdf", "table", "text-extraction", "pdfplumber", "document"]
categories = ["parser-implementations", "text-processing"]

[features]
default = ["std"]
std = []
serde = ["pdfplumber-core/serde"]
parallel = ["dep:rayon"]

[dependencies]
pdfplumber-core = { version = "0.1.0", path = "../pdfplumber-core" }
pdfplumber-parse = { version = "0.1.0", path = "../pdfplumber-parse" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lopdf = "0.34"
serde_json = "1.0"

[[bench]]
name = "extraction"
harness = false
